--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&family=Sen:wght@400;700&display=swap"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="/css/main.css" />
-<link rel="stylesheet" href="/css/header.css" />
-<link rel="stylesheet" href="/css/footer.css" />
-<link rel="stylesheet" href="/css/mine.css" />
+<link rel="stylesheet" href="css/main.css" />
+<link rel="stylesheet" href="css/header.css" />
+<link rel="stylesheet" href="css/footer.css" />
+<link rel="stylesheet" href="css/mine.css" />
 
 
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <meta name="description" content="MoscowNemo — это компания, которая специализируется на продаже различных видов рыбок, аквариумов и растений. Аквариумистика - это наше всё. Ждём Вас."/>
   </head>
   <body style="background-color: antiquewhite;">
